[package]
name = "spacex_sdk"
version = "0.1.0"
edition = "2021"
authors = ["jiawei397 <jw397@126.com>"]
license = "MIT"
description = "spacex sdk"
repository = "https://github.com/jiawei397/spacex_sdk"
keywords = ["spacex", "sdk"]
readme = "README.md"
documentation = "https://docs.rs/spacex_sdk"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
nanoid = "0.4"
base64 = "0.13"
jwfetch = "0.3"
serde =  {version = "1", features =["derive"]}
anyhow = "1"
cached = "0.40"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = "0.10"

[[example]]
name = "simple"
path = "examples/simple.rs"